新增物品导航模块（半成品）

--- a/index.html
+++ b/index.html
@@ -138,5 +138,209 @@
             </div>
         </div>
    </header>
+   <div class="fs">
+       <div class="grid w">
+           <div class="fs_col1">
+               <div class="J_cate" aria-label="左侧导航">
+                   <ul class="menu">
+                       <li class="menu_item">
+                           <a class="menu_lk" href="#">家用电器</a>
+                       </li>
+                       <li class="menu_item">
+                        <a class="menu_lk" href="#">手机</a>
+                        <span class="menu_line">/</span>
+                        <a class="menu_lk" href="#">运营商</a>
+                        <span class="menu_line">/</span>
+                        <a class="menu_lk" href="#">数码</a>
+                       </li>
+                       <li class="menu_item">
+                        <a class="menu_lk" href="#">电脑</a>
+                        <span class="menu_line">/</span>
+                        <a class="menu_lk" href="#">办公</a>
+                       </li>
+                       <li class="menu_item">
+                        <a class="menu_lk" href="#">家居</a>
+                        <span class="menu_line">/</span>
+                        <a class="menu_lk" href="#">家具</a>
+                        <span class="menu_line">/</span>
+                        <a class="menu_lk" href="#">家装</a>
+                        <span class="menu_line">/</span>
+                        <a class="menu_lk" href="#">厨具</a>
+                       </li>
+                       <li class="menu_item">
+                        <a class="menu_lk" href="#">男装</a>
+                        <span class="menu_line">/</span>
+                        <a class="menu_lk" href="#">女装</a>
+                        <span class="menu_line">/</span>
+                        <a class="menu_lk" href="#">童装</a>
+                        <span class="menu_line">/</span>
+                        <a class="menu_lk" href="#">内衣</a>
+                       </li>
+                       <li class="menu_item">
+                        <a class="menu_lk" href="#">美妆</a>
+                        <span class="menu_line">/</span>
+                        <a class="menu_lk" href="#">个护清洁</a>
+                        <span class="menu_line">/</span>
+                        <a class="menu_lk" href="#">宠物</a>
+                       </li>
+                       <li class="menu_item">
+                        <a class="menu_lk" href="#">女鞋</a>
+                        <span class="menu_line">/</span>
+                        <a class="menu_lk" href="#">箱包</a>
+                        <span class="menu_line">/</span>
+                        <a class="menu_lk" href="#">钟表</a>
+                        <span class="menu_line">/</span>
+                        <a class="menu_lk" href="#">珠宝</a>
+                       </li>
+                       <li class="menu_item">
+                        <a class="menu_lk" href="#">男鞋</a>
+                        <span class="menu_line">/</span>
+                        <a class="menu_lk" href="#">运动</a>
+                        <span class="menu_line">/</span>
+                        <a class="menu_lk" href="#">户外</a>
+                       </li>
+                       <li class="menu_item">
+                        <a class="menu_lk" href="#">房产</a>
+                        <span class="menu_line">/</span>
+                        <a class="menu_lk" href="#">汽车</a>
+                        <span class="menu_line">/</span>
+                        <a class="menu_lk" href="#">汽车用品</a>
+                       </li>
+                       <li class="menu_item">
+                        <a class="menu_lk" href="#">母婴</a>
+                        <span class="menu_line">/</span>
+                        <a class="menu_lk" href="#">玩具乐器</a>
+                       </li>
+                       <li class="menu_item">
+                        <a class="menu_lk" href="#">食品</a>
+                        <span class="menu_line">/</span>
+                        <a class="menu_lk" href="#">酒类</a>
+                        <span class="menu_line">/</span>
+                        <a class="menu_lk" href="#">生鲜</a>
+                        <span class="menu_line">/</span>
+                        <a class="menu_lk" href="#">特产</a>
+                       </li>
+                       <li class="menu_item">
+                        <a class="menu_lk" href="#">艺术</a>
+                        <span class="menu_line">/</span>
+                        <a class="menu_lk" href="#">礼品鲜花</a>
+                        <span class="menu_line">/</span>
+                        <a class="menu_lk" href="#">农资绿植</a>
+                       </li>
+                       <li class="menu_item">
+                        <a class="menu_lk" href="#">医药保健</a>
+                        <span class="menu_line">/</span>
+                        <a class="menu_lk" href="#">计生情趣</a>
+                       </li>
+                       <li class="menu_item">
+                        <a class="menu_lk" href="#">图书</a>
+                        <span class="menu_line">/</span>
+                        <a class="menu_lk" href="#">文娱</a>
+                        <span class="menu_line">/</span>
+                        <a class="menu_lk" href="#">教育</a>
+                        <span class="menu_line">/</span>
+                        <a class="menu_lk" href="#">电子书</a>
+                       </li>
+                       <li class="menu_item">
+                        <a class="menu_lk" href="#">机票</a>
+                        <span class="menu_line">/</span>
+                        <a class="menu_lk" href="#">酒店</a>
+                        <span class="menu_line">/</span>
+                        <a class="menu_lk" href="#">旅游</a>
+                        <span class="menu_line">/</span>
+                        <a class="menu_lk" href="#">生活</a>
+                       </li>
+                       <li class="menu_item">
+                        <a class="menu_lk" href="#">理财</a>
+                        <span class="menu_line">/</span>
+                        <a class="menu_lk" href="#">众筹</a>
+                        <span class="menu_line">/</span>
+                        <a class="menu_lk" href="#">白条</a>
+                        <span class="menu_line">/</span>
+                        <a class="menu_lk" href="#">保险</a>
+                       </li>
+                       <li class="menu_item">
+                        <a class="menu_lk" href="#">安装</a>
+                        <span class="menu_line">/</span>
+                        <a class="menu_lk" href="#">维修</a>
+                        <span class="menu_line">/</span>
+                        <a class="menu_lk" href="#">清理</a>
+                        <span class="menu_line">/</span>
+                        <a class="menu_lk" href="#">二手</a>
+                       </li>
+                       <li class="menu_item">
+                        <a class="menu_lk" href="#">工业品</a>
+                       </li>
+                   </ul>
+               </div>
+           </div>
+           <div class="fs_col2">
+               <div class="J_focus">
+                   <div class="focus_slider"></div>
+               </div>
+           </div>
+           <div class="fs_col3">
+               <div class="J_user">
+                   <div class="user_info">
+                       <div class="user_info_lk1">
+                           <div class="user_avatar">
+                               <a class="user_avatar_lk" href="#">
+                                   <img src="img/head.png" alt="个人头像">
+                               </a>
+                           </div>
+                           <div class="user_show">
+                                <a class="user_tip" href="#">欢迎访问品优</a>
+                                <p>
+                                    <a class="user_login" href="#">登录</a>
+                                    <span>|</span>
+                                    <a class="user_regist" href="#">注册</a>
+                                </p>
+                           </div>
+                       </div>
+                       <div class="user_info_lk2">
+                           <div class="user_profit">
+                               <a class="user_profit_lk" href="#">新人福利</a>
+                               <a class="user_profit_lk user_profit_lk_plus" href="#">PLUS会员</a>
+                           </div>
+                       </div>
+                   </div>
+               </div>
+               <div class="new">
+                   <div class="news_hd">
+                       <h5 class="news_tit">品优快报</h5>
+                       <a href="#" class="news_more">更多
+                           <i class="iconfont"></i>
+                       </a>
+                   </div>
+                   <ul class="news_list">
+                       <li class="news_item">
+                           <a href="#" class="news_lk">
+                               <span class="news_tag">推荐</span>
+                               开智小锌酵母锌口服液评测：好吸收，浓浓椰香
+                            </a>
+                        </li>
+                       <li class="news_item">
+                           <a href="#" class="news_lk">
+                               <span class="news_tag">热评</span>
+                               万家乐零冷水燃气热水器，给你优质的使用体验
+                            </a>
+                        </li>
+                       <li class="news_item">
+                           <a href="#" class="news_lk">
+                               <span class="news_tag">热评</span>
+                               大华256G固态硬盘，传输快速容量大，让你存储无烦恼
+                            </a>
+                        </li>
+                       <li class="news_item">
+                           <a href="#" class="news_lk">
+                               <span class="news_tag">推荐</span>
+                               LG OLED A1遇上RGB灯光，电竞信仰瞬间充满
+                            </a>
+                        </li>
+                   </ul>
+               </div>
+           </div>
+       </div>
+   </div>
 </body>
 </html>
