--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             </div>
         </div>
    </header>
-   <div class="fs" style="display: none;">
+   <div class="fs">
        <div class="grid w">
            <div class="fs_col1">
                <div class="J_cate" aria-label="左侧导航">
@@ -277,7 +277,28 @@
            </div>
            <div class="fs_col2">
                <div class="J_focus">
-                   <div class="focus_slider"></div>
+                   <div class="focus_slider">
+                       <a href="#" class="arrow-l"><i class="iconfont"></i></a>
+                       <a href="#" class="arrow-r"><i class="iconfont"></i></a>
+                       <ul>
+                           <li><a href="#"><img src="/upload/focus.jpg" alt=""></a></li>
+                       </ul>
+                       <ol class="slider_indicators">
+                           <li></li>
+                           <li class="slider_current"></li>
+                           <li></li>
+                           <li></li>
+                           <li></li>
+                           <li></li>
+                           <li></li>
+                           <li></li>
+                       </ol>
+                   </div>
+                   <div class="focus_wrapper">
+                       <a class="focus_wrapper_item" href="#"><img src="upload/wrapper-item1.png" alt=""></a>
+                       <a class="focus_wrapper_item" href="#"><img src="upload/wrapper-item2.jpg" alt=""></a>
+                       <a class="focus_wrapper_item" href="#"><img src="upload/wrapper-item3.png" alt=""></a>
+                   </div>
                </div>
            </div>
            <div class="fs_col3">
@@ -339,6 +360,106 @@
                             </a>
                         </li>
                    </ul>
+               </div>
+               <div class="service_entry">
+                <ul class="service_list">
+                    <li class="service_item">
+                        <a href="#" class="service_lk">
+                            <i class="service_ico">
+                                <img class="service_ico_img" src="img/news-ico1.png" alt="">
+                                <span class="service_txt">话费</span>
+                            </i>
+                         </a>
+                     </li>
+                     <li class="service_item">
+                        <a href="#" class="service_lk">
+                            <i class="service_ico">
+                                <img class="service_ico_img" src="img/news-ico2.png" alt="">
+                                <span class="service_txt">机票</span>
+                            </i>
+                         </a>
+                     </li>
+                     <li class="service_item">
+                        <a href="#" class="service_lk">
+                            <i class="service_ico">
+                                <img class="service_ico_img" src="img/news-ico3.png" alt="">
+                                <span class="service_txt">酒店</span>
+                            </i>
+                         </a>
+                     </li>
+                     <li class="service_item">
+                        <a href="#" class="service_lk">
+                            <i class="service_ico">
+                                <img class="service_ico_img" src="img/news-ico4.png" alt="">
+                                <span class="service_txt">游戏</span>
+                            </i>
+                         </a>
+                     </li>
+                     <li class="service_item">
+                        <a href="#" class="service_lk">
+                            <i class="service_ico">
+                                <img class="service_ico_img" src="img/news-ico5.png" alt="">
+                                <span class="service_txt">加油卡</span>
+                            </i>
+                         </a>
+                     </li>
+                     <li class="service_item">
+                        <a href="#" class="service_lk">
+                            <i class="service_ico">
+                                <img class="service_ico_img" src="img/news-ico6.png" alt="">
+                                <span class="service_txt">火车票</span>
+                            </i>
+                         </a>
+                     </li>
+                     <li class="service_item">
+                        <a href="#" class="service_lk">
+                            <i class="service_ico">
+                                <img class="service_ico_img" src="img/news-ico7.png" alt="">
+                                <span class="service_txt">众筹</span>
+                            </i>
+                         </a>
+                     </li>
+                     <li class="service_item">
+                        <a href="#" class="service_lk">
+                            <i class="service_ico">
+                                <img class="service_ico_img" src="img/news-ico8.png" alt="">
+                                <span class="service_txt">理财</span>
+                            </i>
+                         </a>
+                     </li>
+                     <li class="service_item">
+                        <a href="#" class="service_lk">
+                            <i class="service_ico">
+                                <img class="service_ico_img" src="img/news-ico9.png" alt="">
+                                <span class="service_txt">白条</span>
+                            </i>
+                         </a>
+                     </li>
+                     <li class="service_item">
+                        <a href="#" class="service_lk">
+                            <i class="service_ico">
+                                <img class="service_ico_img" src="img/news-ico10.png" alt="">
+                                <span class="service_txt">电影票</span>
+                            </i>
+                         </a>
+                     </li>
+                     <li class="service_item">
+                        <a href="#" class="service_lk">
+                            <i class="service_ico">
+                                <img class="service_ico_img" src="img/news-ico11.png" alt="">
+                                <span class="service_txt">企业购</span>
+                            </i>
+                         </a>
+                     </li>
+                     <li class="service_item">
+                        <a href="#" class="service_lk">
+                            <i class="service_ico">
+                                <img class="service_ico_img" src="img/news-ico12.png" alt="">
+                                <span class="service_txt">礼品卡</span>
+                            </i>
+                         </a>
+                     </li>
+                </ul>
                </div>
            </div>
        </div>
