--- a/index.html
+++ b/index.html
@@ -464,6 +464,95 @@
            </div>
        </div>
    </div>
+   <div class="apps">
+       <div class="w">
+           <div class="seckill">
+               <div class="seckill_countdownbox">
+                   <a href="#" class="seckill_countdown">
+                       <h3 class="seckill_countdown_tit">品优秒杀</h3>
+                       <p class="seckill_countdown_desc">
+                           <strong>8:00</strong>
+                           点场 距结束
+                       </p>
+                       <div class="seckill_countdown_timer">
+                           <span class="timer_style timer_hour">23</span>
+                           <span class="timer_split timer_split_l">:</span>
+                           <span class="timer_style timer_minute">59</span>
+                           <span class="timer_split timer_split_r">:</span>
+                           <span class="timer_style timer_second">59</span>
+                       </div>
+                   </a>
+               </div>
+               <div class="seckill_list" style="overflow: hidden;">
+                   <button class="arrow-l"><i class="iconfont"></i></button>
+                   <button class="arrow-r"><i class="iconfont"></i></button>
+                   <div class="slider_wrapper">
+                       <a href="#" class="slider_item">
+                           <div class="item_img_lk">
+                            <img class="item_img" src="upload/item1.jpg" alt="">
+                           </div>
+                           <h6 class="item_name">魅族 18 12GB+256GB 踏雪 骁龙888 6.2英寸2K AMOLED曲面屏 6400W高清三摄光学防抖 36W超充 旗舰5G手机</h6>
+                           <p class="item_price">
+                               <i>￥</i>
+                               <span>3999.00</span>
+                           </p>
+                       </a>
+                       <a href="#" class="slider_item">
+                        <div class="item_img_lk">
+                         <img class="item_img" src="upload/item2.png" alt="">
+                        </div>
+                        <h6 class="item_name">吉普（Jeep）男鞋高帮休闲鞋男潮流时尚板鞋户外运动鞋子男 5039606236 沙色 42</h6>
+                        <p class="item_price">
+                            <i>￥</i>
+                            <span>238.00</span>
+                        </p>
+                    </a>
+                    <a href="#" class="slider_item">
+                        <div class="item_img_lk">
+                         <img class="item_img" src="upload/item3.jpg" alt="">
+                        </div>
+                        <h6 class="item_name">OnePlus 一加 Buds Z2无线40dB主动降噪蓝牙耳机昼白 38小时长效续航 适配华为荣耀oppo小米苹果</h6>
+                        <p class="item_price">
+                            <i>￥</i>
+                            <span>399.00</span>
+                        </p>
+                    </a>
+                    <a href="#" class="slider_item">
+                        <div class="item_img_lk">
+                         <img class="item_img" src="upload/item4.png" alt="">
+                        </div>
+                        <h6 class="item_name">钓鱼台 国宾酒（第一代） 酱香型白酒 53度 500ml 单瓶装</h6>
+                        <p class="item_price">
+                            <i>￥</i>
+                            <span>658.00</span>
+                        </p>
+                    </a>
+                   </div>
+               </div>
+               <div class="seckill_brand">
+                <a href="#" class="slider_item brand_item">
+                    <div class="brand_item_img_lk">
+                     <img class="item_img" src="upload/item-gd.jpg" alt="">
+                    </div>
+                    <div class="item_info">
+                        <p class="item_info_tit">精品文具专场</p>
+                        <p class="item_info_promo">精品文具低至6元</p>
+                        <div class="item_info_button">
+                            品牌秒杀
+                            <i class="iconfont"></i>
+                        </div>
+                    </div>
+                    <div class="slider_indicators">
+                        <i class="slider_indicators_btn"></i>
+                        <i class="slider_indicators_btn"></i>
+                    </div>
+                </a>
+               </div>
+               
+
+           </div>
+       </div>
+   </div>
    <footer>
        <div class="w">
             <div class="mod_service">
@@ -539,7 +628,7 @@
                             <li><a href="#">延保服务</a></li>
                             <li><a href="#">品优E卡</a></li>
                             <li><a href="#">品优通信</a></li>
-                            <li><a href="#"></a>品优智能</li>
+                            <li><a href="#">品优智能</a></li>
                         </ul>
                     </div>
                     <div class="mod_help_cover">
