新增"发现好货"；完善商品图片滑过不透明度

--- a/index.html
+++ b/index.html
@@ -678,6 +678,39 @@
                         </div>
                     </div>
                 </div>
+                <div class="block2">
+                    <a class="findgoods_logo" href="#">
+                        <img class="findgoods_logo_img" src="img/findgoods.png" alt="">
+                        <span class="findgoods_slogan">探索新生活</span>
+                        <i class="findgoods_ico"></i>
+                    </a>
+                    <div class="findgoods_slider">
+                        <div class="findgoods_itemlist">
+                            <a class="findgoods_item" href="#">
+                                <img class="findgoods_item_img" src="upload/findgoodsitem.png" alt="">
+                                <span class="findgoods_item_name">蝶本潮汕油甘果</span>
+                            </a>
+                            <a class="findgoods_item" href="#">
+                                <span class="findgoods_item_name">蝶本潮汕油甘果</span>
+                                <img class="findgoods_item_img" src="upload/findgoodsitem.png" alt="">
+                                
+                            </a>
+                            <a class="findgoods_item" href="#">
+                                <img class="findgoods_item_img" src="upload/findgoodsitem.png" alt="">
+                                <span class="findgoods_item_name">蝶本潮汕油甘果</span>
+                            </a>
+                            <a class="findgoods_item" href="#">
+                                <span class="findgoods_item_name">蝶本潮汕油甘果</span>
+                                <img class="findgoods_item_img" src="upload/findgoodsitem.png" alt="">
+                                
+                            </a>
+                            <a class="findgoods_item" href="#">
+                                <img class="findgoods_item_img" src="upload/findgoodsitem.png" alt="">
+                                <span class="findgoods_item_name">蝶本潮汕油甘果</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
            </div>
        </div>
    </div>
