新增joy寻宝模块；微调界面布局

--- a/index.html
+++ b/index.html
@@ -711,6 +711,78 @@
                         </div>
                     </div>
                 </div>
+                <div class="block3">
+                    <div class="block3_container">
+                        <div class="item_dh">
+                            <a href="#" class="dh_lk">
+                                <h3 class="dh_tit">新品首发</h3>
+                                <i class="dh_go"></i>
+                            </a>
+                        </div>
+                        <div class="newitme_slider" style="overflow: hidden;">
+                            <button class="arrow-l"><i class="iconfont"></i></button>
+                            <button class="arrow-r"><i class="iconfont"></i></button>
+                            <div class="newitem_list">
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="block3_container">
+                        <div class="item_dh">
+                            <a href="#" class="dh_lk">
+                                <h3 class="dh_tit">JOY寻宝</h3>
+                                <i class="dh_go"></i>
+                            </a>
+                        </div>
+                        <div class="joy_box">
+                            <div class="joy_head">
+                                <a class="joy_head_item joy_now" href="#">换个新机</a>
+                                <a class="joy_head_item" href="#">换个新机</a>
+                                <a class="joy_head_item" href="#">换个新机</a>
+                                <a class="joy_head_item" href="#">换个新机</a>
+                            </div>
+                            <div class="joy_itemlist">
+                                <a class="joy_item" href="#">
+                                    <img class="joy_item_img" src="upload/mate30.png" alt="">
+                                    <div class="joy_item_text">
+                                        <span class="joy_item_name">【二手95新】华为Mate 30 RS 保时捷5G版 麒麟990芯片 OLED环幕屏双4000万徕卡 黑色【赠3C认证快充】 12GB+512GB</span>
+                                        <span class="item_price joy_item_price"><i class="price_ico">￥</i>5499.00</span>
+                                    </div>
+                                </a>
+                                <a class="joy_item" href="#">
+                                    <img class="joy_item_img" src="upload/mate30.png" alt="">
+                                    <div class="joy_item_text">
+                                        <span class="joy_item_name">【二手95新】华为Mate 30 RS 保时捷5G版 麒麟990芯片 OLED环幕屏双4000万徕卡 黑色【赠3C认证快充】 12GB+512GB</span>
+                                        <span class="item_price joy_item_price"><i class="price_ico">￥</i>5499.00</span>
+                                    </div>
+                                </a>
+                                <a class="joy_item" href="#">
+                                    <img class="joy_item_img" src="upload/mate30.png" alt="">
+                                    <div class="joy_item_text">
+                                        <span class="joy_item_name">【二手95新】华为Mate 30 RS 保时捷5G版 麒麟990芯片 OLED环幕屏双4000万徕卡 黑色【赠3C认证快充】 12GB+512GB</span>
+                                        <span class="item_price joy_item_price"><i class="price_ico">￥</i>5499.00</span>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="block3_container">
+                        <div class="item_dh">
+                            <a href="#" class="dh_lk">
+                                <h3 class="dh_tit">逛好店</h3>
+                                <i class="dh_go"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="block3_container">
+                        <div class="item_dh">
+                            <a href="#" class="dh_lk">
+                                <h3 class="dh_tit">领券中心</h3>
+                                <i class="dh_go"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
            </div>
        </div>
    </div>
