"特色优选"完成90%；剩下日后学会了补充

--- a/index.html
+++ b/index.html
@@ -719,11 +719,11 @@
                                 <i class="dh_go"></i>
                             </a>
                         </div>
-                        <div class="newitme_slider" style="overflow: hidden;">
+                        <div class="newitem_slider" style="overflow: hidden;">
                             <button class="arrow-l"><i class="iconfont"></i></button>
                             <button class="arrow-r"><i class="iconfont"></i></button>
-                            <div class="newitem_list">
-
+                            <div class="newitem_list" style="overflow: initial;">
+                                <div class="newitem_slider_wrapper"></div>
                             </div>
                         </div>
                     </div>
@@ -773,6 +773,22 @@
                                 <i class="dh_go"></i>
                             </a>
                         </div>
+                        <div class="goodshop">
+                            <a href="#" class="goodshop_item">
+                                <h6 class="goodshop_item_tit">曲一线京东自营店</h6>
+                                <span class="goodshop_item_tag goodshop_item_tag1">自营</span>
+                                <span class="goodshop_item_tag goodshop_item_tag2">博览群书</span>
+                                <span class="goodshop_item_num">38.8万人关注</span>
+                                <img src="upload/goodshop_item.jpg" alt="" class="goodshop_item_img">
+                            </a>
+                            <a href="#" class="goodshop_item">
+                                <h6 class="goodshop_item_tit">曲一线京东自营店</h6>
+                                <span class="goodshop_item_tag goodshop_item_tag1">自营</span>
+                                <span class="goodshop_item_tag goodshop_item_tag2">博览群书</span>
+                                <span class="goodshop_item_num">38.8万人关注</span>
+                                <img src="upload/goodshop_item.jpg" alt="" class="goodshop_item_img">
+                            </a>
+                        </div>
                     </div>
                     <div class="block3_container">
                         <div class="item_dh">
@@ -780,6 +796,40 @@
                                 <h3 class="dh_tit">领券中心</h3>
                                 <i class="dh_go"></i>
                             </a>
+                        </div>
+                        <div class="coupon">
+                            <div class="coupon_list">
+                                <a href="#" class="coupon_item">
+                                    <div class="coupon_item_img_box">
+                                        <img src="upload/coupon-item.jpg" alt="" class="coupon_item_img">
+                                     </div>
+                                    <span class="coupon_ietm_price"><i class="price_ico">￥</i>15</span>
+                                    <span class="coupon_priceconditions">满149元可用</span>
+                                    <span class="coupon_itemconditions">仅可购买食品饮料部分商品</span>
+                                    <span class="coupon_more">更多好券</span>
+                                    <i class="iconfont coupon_more_ico"></i>
+                                </a>
+                                <a href="#" class="coupon_item">
+                                    <div class="coupon_item_img_box">
+                                        <img src="upload/coupon-item.jpg" alt="" class="coupon_item_img">
+                                     </div>
+                                    <span class="coupon_ietm_price"><i class="price_ico">￥</i>15</span>
+                                    <span class="coupon_priceconditions">满149元可用</span>
+                                    <span class="coupon_itemconditions">仅可购买食品饮料部分商品</span>
+                                    <span class="coupon_more">更多好券</span>
+                                    <i class="iconfont coupon_more_ico"></i>
+                                </a>
+                                <a href="#" class="coupon_item">
+                                    <div class="coupon_item_img_box">
+                                        <img src="upload/coupon-item.jpg" alt="" class="coupon_item_img">
+                                     </div>
+                                    <span class="coupon_ietm_price"><i class="price_ico">￥</i>15</span>
+                                    <span class="coupon_priceconditions">满149元可用</span>
+                                    <span class="coupon_itemconditions">仅可购买食品饮料部分商品</span>
+                                    <span class="coupon_more">更多好券</span>
+                                    <i class="iconfont coupon_more_ico"></i>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
